# apollo-miku-planner

./: .gitignore  Makefile  pyproject.toml
fonts/: README.md  local-fonts.tex
tests/: test_toc_styles.py
任务书/: prompt.md  廖嘉旺 - 任务书.docx
可视化/: _fill_tbd_metrics.py  _gen_context_tex.py  _gen_metrics_tex.py  apollo_pipeline.py  metric_score.py  run_ablation.py  sensitivity_analysis.py
图片/: _figpreamble.tex  _figure_blocks_exp.tex  _gen_exp_figs.py  fig_algorithm_flow.tex  fig_apollo_arch.tex  fig_arrival_time_compare.tex  fig_baseline_greedy_flow.tex  fig_constraint_compare_a.tex  fig_constraint_compare_b.tex  fig_contribution_summary.tex  fig_corridor.tex  fig_corridor_a.tex  fig_corridor_b.tex  fig_corridor_gen.tex  fig_corridor_gen_a.tex  fig_corridor_gen_b.tex  fig_corridor_gen_c.tex  fig_dynamic_exclusion_a.tex  fig_dynamic_exclusion_b.tex  fig_dynamic_exclusion_c.tex  fig_eng_scn01_dreamview.tex  fig_eng_scn01_dreamview_a.tex  fig_eng_scn01_dreamview_b.tex  fig_eng_scn01_dreamview_c.tex  fig_eng_scn02_dreamview.tex  fig_eng_scn02_dreamview_a.tex  fig_eng_scn02_dreamview_b.tex  fig_eng_scn02_dreamview_c.tex  fig_eng_scn03_dreamview.tex  fig_eng_scn03_dreamview_a.tex  fig_eng_scn03_dreamview_b.tex  fig_eng_scn03_dreamview_c.tex  fig_exp_01_crossing_ped_sl.tex  fig_exp_01_crossing_ped_sl_a.tex  fig_exp_01_crossing_ped_sl_b.tex  fig_exp_01_crossing_ped_st.tex  fig_exp_01_crossing_ped_st_a.tex  fig_exp_01_crossing_ped_st_b.tex  fig_exp_01_crossing_ped_va.tex  fig_exp_01_crossing_ped_va_a.tex  (+185 more)
工具/: FORMAT_SPEC.md  gbt7714.csl  tex_to_docx.py
开题报告/: 中期报告.md  (+6 more)
(+88 files in other folders)
